# merian-busco-painter

./: .env.example  .gitignore  LICENSE  README.md  busco_to_merian.sh  buscopainter.py  plot_buscopainter.py  pyproject.toml  requirements.txt
examples/: ilApoPilo2.fa.fai  ilApoPilo2_full_table.tsv  ilHelArmi9_full_table.tsv
src/merian_busco_painter/: __init__.py  __main__.py  cli.py  painter.py  plotter.py
